# poker

./: Planung.docx  README.md  ~$lanung.docx
game/cpp/: CMakeLists.txt  conanfile.txt
game/cpp/apps/: CMakeLists.txt  main.cpp  preflopstrengths.cpp
game/cpp/include/: Action.h  Board.h  Card52.h  Dealer.h  DecisionEngine.h  Deck52.h  Hand.h  HandHistory.h  HoleCards.h  Nlhe.h  Player.h  Pot.h  RatedHand.h  Stack.h
game/cpp/src/: Action.cpp  Action.h  Board.cpp  CMakeLists.txt  Card52.cpp  Card52.h  Dealer.cpp  Dealer.h  DecisionEngine.cpp  Deck52.cpp  Deck52.h  Hand.cpp  Hand.h  HandHistory.cpp  HandHistory.h  HandRange.cpp  HandRange.h  HoleCards.cpp  HoleCards.h  HowardsCombinatorics.h  Nlhe.cpp  Player.cpp  Pot.cpp  Pot.h  RatedHand.cpp  RatedHand.h  Stack.cpp  Stack.h
game/cpp/src/par/: CMakeLists.txt  Calculation.h  Scheduler.cpp  Scheduler.h
game/cpp/tests/: CMakeLists.txt  CardTests.cpp  ClassifiedHandTests.cpp  DealerTests.cpp
